add react router

--- a/src/Components/Nav/Nav.scss
+++ b/src/Components/Nav/Nav.scss
@@ -1,3 +1,17 @@
 .Nav{
     background: coral;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    .navLinks{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        list-style: none;
+        width: 40%;
+        .link{
+            text-decoration: none;
+            color: white;
+        }
+    }
 }
