--- a/src/index.scss
+++ b/src/index.scss
@@ -2,7 +2,7 @@
 @import "./Pages/Home/Home.scss";
 
 body{
-  background: #333;
-  color: whitesmoke;
+  background: #ccc;
+  color: #333;
   font-family: 'Courier New', Courier, monospace;
 }
