--- a/src/Components/Nav/Nav.scss
+++ b/src/Components/Nav/Nav.scss
@@ -1,5 +1,5 @@
 .Nav{
-    background: coral;
+    //background: coral;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -11,7 +11,7 @@
         width: 40%;
         .link{
             text-decoration: none;
-            color: white;
+            color: #333;
         }
     }
 }
