--- a/src/Pages/Home/Home.scss
+++ b/src/Pages/Home/Home.scss
@@ -1,6 +1,7 @@
 .Home{
+    height: 100vh;
     .Hero{
-        background: #c0b8b8;
+        background: #afafaf;
         width: 1200px;
         height: 680px;
         padding: 1em;
@@ -14,3 +15,5 @@
         }
     }
 }
+
+
