--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,7 @@
 @import "./Pages/Projects/Projects.scss";
 @import "./Pages/Services/Services.scss";
 @import "./Components/Banner/Banner.scss";
+@import "./Components/Card/Card.scss";
 
 
 body{
