--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,7 @@
 @import "./Pages/Services/Services.scss";
 @import "./Components/Banner/Banner.scss";
 @import "./Components/Card/Card.scss";
+@import "./Pages/Footer/Footer.scss";
 
 
 body{
