--- a/src/Components/Nav/Nav.scss
+++ b/src/Components/Nav/Nav.scss
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    padding: 1em;
     .navLinks{
         display: flex;
         justify-content: space-around;
