--- a/src/Pages/Home/Home.scss
+++ b/src/Pages/Home/Home.scss
@@ -1,7 +1,7 @@
 .Home{
     height: 100vh;
     .Hero{
-        background: #afafaf;
+        background: #e2e2e2;
         width: 1200px;
         height: 680px;
         padding: 1em;
