--- a/src/Components/Nav/Nav.scss
+++ b/src/Components/Nav/Nav.scss
@@ -4,6 +4,11 @@
     justify-content: space-around;
     align-items: center;
     padding: 1em;
+    h3{
+        text-transform: uppercase;
+        font-weight: bolder;
+        font-size: 20px;
+    }
     .navLinks{
         display: flex;
         justify-content: space-around;
@@ -13,6 +18,10 @@
         .link{
             text-decoration: none;
             color: #333;
+        }
+        .link:hover{
+            color: rgb(247, 247, 247);
+            transition: 0.2s ease;
         }
     }
 }
