--- a/src/Components/Banner/Banner.scss
+++ b/src/Components/Banner/Banner.scss
@@ -7,20 +7,20 @@
     justify-content: space-around;
     align-items: center;
     .circle-1{
-        width: 120px;
-        height: 120px;
+        width: 5em;
+        height: 5em;
         border-radius: 50%;
         background-color: rgb(22, 22, 22);
     }
     .circle-2{
-        width: 120px;
-        height: 120px;
+        width: 5em;
+        height: 5em;
         border-radius: 50%;
         background-color: #fff;
     }
     .circle-3{
-        width: 120px;
-        height: 120px;
+        width: 5em;
+        height: 5em;
         border-radius: 50%;
         background-color: coral;
     }
